Configurado el responsive web

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/estilosPropios.css">
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/jquery-3.4.1.js"></script>
     <meta charset="UTF-8">
@@ -9,6 +10,7 @@
     <title>Retray</title>
 </head>
 <body>
+    <p class="textoTitulo">Texto de prueba</p>
     <h2>Lista de herramientas</h2>
     <h1>Entorno Web</h1>
     <p>Bootstrap</p>
