Añadidos divs del primer modulo

--- a/index.html
+++ b/index.html
@@ -27,21 +27,16 @@
 </header>
 <body>
     <div class="titulo">
-        <p class="display-1">Julian Camilo</p>
-        <p class="textoTitulo">Texto de prueba</p>
-        <h2>Lista de herramientas</h2>
-        <h1>Entorno Web</h1>
-        <p>Bootstrap</p>
-        <h1>Bases de datos</h1>
-        <p>XAMPP, WAAMPP para 127.0.0.1, MySQL, Oracle Database, MongoDB</p>
-        <h2>Programación</h2>
-        <p>C++, C#, Java, Kotlin, MatLAB</p>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto vitae dignissimos sint cupiditate placeat id ut officia culpa a similique. Suscipit veniam vero aut nisi itaque laboriosam praesentium ullam! Debitis.</h1>
+        <div class="row">
+            <div class="col-sm">
+                <center><img src="img/profilePhoto.png" class="img-fluid mx-auto d-block profile"></center>
+            </div>
+            <div class="col-sm zonaGit">
+                <img src="img/octocat.png" class="img-fluid mx-auto d-block octocat">
+                <center><p class="h2 text-light">Visita mi perfil en GitHub</p></center>
+                <center><a class="btn btn-primary btn-lg" href="https://github.com/iretray" role="button">Retray en GitHub</a></center>
+            </div>
+        </div>
     </div>
 </body>
 </html>
