Creada barra de navegación con nick

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             });
         });
     </script>
+    <nav class="navbar sticky-top navbar-dark bg-dark">
+        <a class="navbar-brand inverso" href="#">
+            <img src="img/nickStyle.png" width="30" height="30" class="d-inline-block align-top rounded" alt=""> Retray
+        </a>
+    </nav>
 </head>
-<header class="header">
-        <div class="display-1 colorBlanco">Retray</div>
-</header>
 <body>
     <div class="titulo">
         <div class="row">
